# huayan

./: .gitignore  CMakeLists.txt  Dockerfile  HISTORY_CLEANUP.md  Huayan3D.pro  HuayanIndustrialSoftware.pro  LICENSE  MIGRATION_GUIDE.md  Makefile  Qt68_SCADA_Project_Document.md  README.md  README_CN.md  SCADA_使用指南.md  acceptance_test.sh  build.bat  build.conf  build.sh  build_project.bat  build_project.sh  check_qml_syntax.py  clean.sh  docker-compose.yml  main.cpp  package.json  qml.qrc  refactor.sh  resources.qrc  run.sh  scada_launcher.sh  setup_env.sh  二次开发手册.md  华颜软件设计文档.md  用户使用手册.md
.github/workflows/: ci.yml
assets/data/: simulated_points.json
assets/models/: test_model.gltf
designer/: CMakeLists.txt  InfoDialog.qml  main.qml
designer/src/: main.cpp
docs/: HMI控件点位绑定调试指引.md  developer_guide.md  roadmap.md
docs/api/: api_reference.md
examples/: BasicComponentsExample.qml  CMakeLists.txt  IndustrialComponentsExample.qml  MainExample.qml  ThreeDComponentsExample.qml  WaterTreatmentSystemExample.qml  api_usage_example.cpp  component_usage_example.qml  extension_example.cpp  integration_example.cpp
examples/second_development_scaffold/: CMakeLists.txt  main.cpp  scaffoldmanager.cpp  scaffoldmanager.h
examples/steel_plant_monitoring/: CMakeLists.txt  Huayan 完善记录.md  main.cpp  resources.qrc  run_steel_plant.bat  run_steel_plant.sh  simulateddatasource.cpp  simulateddatasource.h  steel_plant_monitoring.qml  steelplantmanager.cpp  steelplantmanager.h  仿真数据说明.md  快速启动文档.md  钢铁厂例程快速体验.md
examples/steel_plant_monitoring/data/: anomaly_alert_data.json  normal_production_data.json
examples/steel_plant_monitoring/icons/: README.md
examples/steel_plant_monitoring/models/: README.md
qml/: Button.qml  ColorDialog.qml  DIPSwitch.qml  Dashboard.qml  DragAndDropHelper.qml  IndicatorLight.qml  MultiStateButton.qml  NumericDisplay.qml  ProgressBar.qml  Slider.qml  StatusBar.qml  Tab.qml  TabView.qml  TextDisplay.qml  ToggleSwitch.qml  main.qml  main.qml.backup  main.qml.normalized
qml/hmi/: HMIDemo.qml
qml/js/: app_logic.js
qml/plugins/BasicComponents/: BasicComponents_qml_module_dir_map.qrc  CMakeLists.txt  Indicator.qml  PushButton.qml  TextLabel.qml  qmldir
qml/plugins/ControlComponents/: CMakeLists.txt  Knob.qml  Slider.qml  qmldir
qml/plugins/IndustrialComponents/: CMakeLists.txt  Gauge.qml  IndustrialButton.qml  IndustrialComponents_qml_module_dir_map.qrc  Motor.qml  Pump.qml  Tank.qml  Valve.qml  qmldir
qml/plugins/ThreeDComponents/: CMakeLists.txt  CameraController.qml  ModelLoader.qml  ThreeDScene.qml  qmldir
runtime/: CMakeLists.txt  main.qml
runtime/src/: main.cpp
scripts/: package_with_deps.sh  run.bat.in  run.sh.in
shared/: CMakeLists.txt
shared/components/: BaseIndustrialComponent.qml  ComponentLibraryPanel.qml  DraggableIndustrialComponent.qml  MotorStatus.qml  PressureGauge.qml  TemperatureDisplay.qml
shared/models/communication/: hymodbustcpdriver.cpp
shared/models/core/: tagmanager.cpp  tagmanager.h
shared/models/datasource/: mqttdatasource.h
src/: CMakeLists.txt  designer_main.qml  main.cpp  main.qml  resources.qrc  runtime_main.qml
src/3d/: 3dpointbinder.cpp  3dpointbinder.h  modelloader.cpp  modelloader.h  modeloptimizer.cpp  modeloptimizer.h
src/communication/: hymodbustcpdriver.cpp  hymodbustcpdriver.h  modbustcpdriver.cpp  modbustcpdriver.h
src/core/: chartdatamodel.cpp  chartdatamodel.h  configmanager.cpp  configmanager.h  dataprocessor.cpp  dataprocessor.h  extensionmanager.cpp  extensionmanager.h  projectmanager.js  tagmanager.cpp  tagmanager.h  timeseriesdatabase.cpp  timeseriesdatabase.h
src/datasource/: datasource.cpp  datasource.h  modbusdatasource.cpp  modbusdatasource.h  mqttdatasource.cpp  mqttdatasource.h  opcuadatasource.cpp  opcuadatasource.h  simulateddatasource.cpp  simulateddatasource.h
src/editor/: editor.qml
src/editor/core/: editorcore.cpp
src/hmi/: hmicommunicationmanager.cpp  hmicommunicationmanager.h  layoutmanager.cpp  layoutmanager.h  main.cpp  touchmanager.cpp  touchmanager.h
src/qml/themes/: IndustrialTheme.qml
src/themes/: IndustrialTheme.qml
test_install/: SCADASystem  run.sh
test_install/qml/plugins/: CMakeLists.txt
test_install/qml/plugins/BasicComponents/: BasicComponents_qml_module_dir_map.qrc  Indicator.qml  PushButton.qml  basiccomponents_qmltyperegistrations.cpp  qmldir
test_install/qml/plugins/BasicComponents/BasicComponents_autogen/: moc_predefs.h
test_install/qml/plugins/BasicComponents/BasicComponentsplugin_autogen/: moc_predefs.h
test_install/qml/plugins/BasicComponents/BasicComponentsplugin_autogen/include/: BasicComponentsplugin_BasicComponentsPlugin.moc.d
test_install/qml/plugins/ChartComponents/: BarChart.qml  CMakeLists.txt  ChartComponents_qml_module_dir_map.qrc  qmldir
test_install/qml/plugins/ControlComponents/: CMakeLists.txt  ControlComponents_qml_module_dir_map.qrc  Knob.qml
test_install/qml/plugins/HMIControls/: CMakeLists.txt  DIPSwitch.qml  LayoutManager.qml  NumericDisplay.qml  Slider.qml  qmldir
test_install/qml/plugins/IndustrialComponents/: CMakeLists.txt  IndustrialButton.qml  IndustrialComponents_qml_module_dir_map.qrc  IndustrialIndicator.qml  Tank.qml  industrialcomponents_qmltyperegistrations.cpp  qmldir
test_install/qml/plugins/IndustrialComponents/IndustrialComponents_autogen/: moc_predefs.h
test_install/qml/plugins/IndustrialComponents/IndustrialComponentsplugin_autogen/: moc_predefs.h
test_install/qml/plugins/IndustrialComponents/IndustrialComponentsplugin_autogen/include/: IndustrialComponentsplugin_IndustrialComponentsPlugin.moc.d
test_install/qml/plugins/ThreeDComponents/: CMakeLists.txt  ModelLoader.qml
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_systemintegration.cpp
tests/qml/: CMakeLists.txt  CanvasOperationsTest.qml  DragDropCoreTest.qml  MainQmlTest.qml  mainqmltest.cpp
tests/unit/: CMakeLists.txt  test_configmanager.cpp  test_dataprocessor.cpp  test_extensionmanager.cpp  test_modbustcpdriver.cpp  test_tagmanager.cpp  test_timeseriesdatabase.cpp
(+36 files in other folders)
